--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">#4986CC</color>
-    <color name="primary_dark">#3700B3</color>
-    <color name="accent">#03DAC5</color>
+    <color name="primary_dark">#3E6FA8</color>
+    <color name="accent">#4BB34B</color>
     <color name="vk_white">#FFFFFF</color>
     <color name="light_gray">#F5F5F5</color>
     <color name="medium_gray">#55000000</color>
