--- a/app/src/main/res/layout/fragment_additional_contant_donating.xml
+++ b/app/src/main/res/layout/fragment_additional_contant_donating.xml
@@ -73,12 +73,13 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonGoSnippet"
         style="@style/VKButton"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_margin="16dp"
         android:text="Создать сбор"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         tools:layout_editor_absoluteX="16dp" />
 
